--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
         </script><![endif]-->
 
         <!-- JS -->
+        <script type="text/javascript" src="src/maps/1.js"></script>
         <script type="text/javascript" src="src/tiletype.js"></script>
         <script type="text/javascript" src="src/tile.js"></script>
+        <script type="text/javascript" src="src/node.js"></script>
+        <script type="text/javascript" src="src/pathfinder.js"></script>
         <script type="text/javascript" src="src/map.js"></script>
         <script type="text/javascript" src="src/player.js"></script>
         <script type="text/javascript" src="assets/gfx.js"></script>
