--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
         <!-- JS -->
         <script type="text/javascript" src="src/maps/1.js"></script>
+        <script type="text/javascript" src="src/maps/2.js"></script>
         <script type="text/javascript" src="src/tiletype.js"></script>
         <script type="text/javascript" src="src/tile.js"></script>
         <script type="text/javascript" src="src/node.js"></script>
